# fpga-tutorial-0-basics

./: CMakeLists.txt  README.md  adder_4b.v  adder_testbench.cpp  full_adder.v
